[package]
name = "client"
version = "0.1.0"
authors = ["Alex Pearson <alex@alexpear.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3.66"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.39"

[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

[dependencies.web-sys]
version = "0.3.4"
features = [
  "WebTransport",
  "WebTransportBidirectionalStream",
  "WebTransportReceiveStream",
  "WebTransportSendStream",
  "ReadableStreamDefaultReader",
  "WritableStreamDefaultWriter",
  "TextDecoder",
  "TextEncoder",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
